--- a/pages/event.html
+++ b/pages/event.html
@@ -27,7 +27,11 @@
           <!-- Le rendre invisible plus le titre et le p  -->
 
           <div class="btn_co">
-            <button class="connexion_btn" role="button">
+            <button
+              class="connexion_btn"
+              role="button"
+              onclick="location.href='connexion.html'"
+            >
               <img
                 src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAj0lEQVR4nNXQQQ7BUBSF4W/UGelc7YgQa5K29oMZXUYtQC0ACzC5Ztr0xYQ/uZP7cv578vhVMuxwQ4c6dqOpsccMBQ6oUgRdBN/MY/eV4JoiqKJ2EeEjyhRBFpIuLpepn7hEg2fMGYux4RItVpjErHHBdszlFvmHtzwkg02auNzHBqchwSMq9zHFfUjwh7wAHuEdJZUq+i0AAAAASUVORK5CYII="
                 alt="user"
@@ -299,7 +303,10 @@
       <!-- card 4 -->
       <div class="event-card">
         <div class="card-image">
-          <img src="./images/events/small/affiche-tourauto-2025.webp" alt="BMW Classic" />
+          <img
+            src="./images/events/small/affiche-tourauto-2025.webp"
+            alt="BMW Classic"
+          />
           <span class="category-tag Vintage">Vintage</span>
           <span class="distance">2.5 km</span>
           <div class="icons">
@@ -339,7 +346,10 @@
       <!--Card 5  -->
       <div class="event-card">
         <div class="card-image">
-          <img src="./images/events/small/kartingcours-urbain2025.webp" alt="BMW Classic" />
+          <img
+            src="./images/events/small/kartingcours-urbain2025.webp"
+            alt="BMW Classic"
+          />
           <span class="category-tag Circuit">Circuit</span>
           <span class="distance">2.5 km</span>
           <div class="icons">
@@ -378,7 +388,10 @@
 
       <div class="event-card">
         <div class="card-image">
-          <img src="./images/events/large/salonelectricauto.webp" alt="BMW Classic" />
+          <img
+            src="./images/events/large/salonelectricauto.webp"
+            alt="BMW Classic"
+          />
           <span class="category-tag Vintage">Vintage</span>
           <span class="distance">2.5 km</span>
           <div class="icons">
