--- a/pages/inscription.html
+++ b/pages/inscription.html
@@ -133,6 +133,7 @@
               <!-- Bouton -->
               <input
                 type="submit"
+                id="back-to-connexion"
                 value="Créer mon compte"
                 aria-label="Créer mon compte"
               />
@@ -149,6 +150,6 @@
     </main>
   </body>
 
- <script type="module" src="../assets/scripts/api/users.js"></script>
+ <script type="module" src="../assets/scripts/api/usersInscription.js"></script>
 
 </html>
