--- a/pages/events.html
+++ b/pages/events.html
@@ -7,37 +7,38 @@
     <link rel="stylesheet" href="/dist/css/theme.css" />
   </head>
   <body>
-    <header class="header">
+  <header class="header">
       <div class="container">
         <div class="header_top">
           <div class="header_logo">
-            <a href="../index.html">NovaMett</a>
+            <a href="./index.html">NovaMett</a>
             <p>Trouve tes events auto</p>
           </div>
           <!--Btn de connexion -->
           <div class="header_nav">
             <nav>
               <ul class="header_liens">
-                <li><a href="../index.html">Acceuil</a></li>
-                <li><a href="event.html">Evenement</a></li>
-                <li><a href="eventAdd.html">Crée</a></li>
+                <li><a href="index.html">Acceuil</a></li>
+                <li><a href="./pages/events.html">Evenement</a></li>
+                <li><a href="./pages/eventAdd.html">Crée</a></li>
               </ul>
             </nav>
-          </div>
-          <!-- Le rendre invisible plus le titre et le p  -->
+            <!-- Le rendre invisible plus le titre et le p  -->
 
-          <div class="btn_co">
-            <button
-              class="connexion_btn"
-              role="button"
-              onclick="location.href='connexion.html'"
-            >
-              <img
-                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAj0lEQVR4nNXQQQ7BUBSF4W/UGelc7YgQa5K29oMZXUYtQC0ACzC5Ztr0xYQ/uZP7cv578vhVMuxwQ4c6dqOpsccMBQ6oUgRdBN/MY/eV4JoiqKJ2EeEjyhRBFpIuLpepn7hEg2fMGYux4RItVpjErHHBdszlFvmHtzwkg02auNzHBqchwSMq9zHFfUjwh7wAHuEdJZUq+i0AAAAASUVORK5CYII="
-                alt="user"
-              />
-              Connexion
-            </button>
+            <div class="btn_co">
+              <button
+                class="connexion_btn"
+                role="button"
+                onclick="location.href='./pages/connexion.html'"
+              >
+                <img
+                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAj0lEQVR4nNXQQQ7BUBSF4W/UGelc7YgQa5K29oMZXUYtQC0ACzC5Ztr0xYQ/uZP7cv578vhVMuxwQ4c6dqOpsccMBQ6oUgRdBN/MY/eV4JoiqKJ2EeEjyhRBFpIuLpepn7hEg2fMGYux4RItVpjErHHBdszlFvmHtzwkg02auNzHBqchwSMq9zHFfUjwh7wAHuEdJZUq+i0AAAAASUVORK5CYII="
+                  alt="user"
+                />
+
+                Connexion
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -50,50 +51,53 @@
       </div>
     </div>
     <section class="filters container_category">
-      <div class="filters-container">
-        <div class="filters-header">
-          <span class="icon">🔻</span>
-          <strong>Filtres</strong>
-        </div>
+  <div class="filters-container">
+    <div class="filters-header">
+      <span class="icon">🔻</span>
+      <strong>Filtres</strong>
+    </div>
 
-        <div class="filters-content">
-          <input type="text" placeholder="Rechercher un événement..." />
+    <div class="filters-content">
+      <!-- 🔍 Recherche -->
+      <input type="text" id="searchInput" placeholder="Rechercher un événement..." />
 
-          <select>
-            <option>Toutes catégories</option>
-            <option >competition</option>
-            <option>Rassemblement</option>
-            <option>mecanique</option>
-            <option>Shows & Festivals</option>
-            <option>Offroad & Aventure</option>
-            <option>Innovation & Futur</option>
-            <option>Culture & Lifestyle</option>
-          
-          </select>
+      <!-- 🏁 Catégories -->
+    <select id="categoryFilter">
+  <option value="all">Toutes catégories</option>
+  <option value="competition">competition</option>
+  <option value="rassemblement">Rassemblement</option>
+  <option value="mecanique">Mécanique</option>
+  <option value="carshow">Shows & Festivals</option>
+  <option value="offroad">Offroad & Aventure</option>
+  <option value="innovation">Innovation & Futur</option>
+  <option value="culture">Culture & Lifestyle</option>
+</select>
 
-          <select>
-            <option>Toutes les dates</option>
-            <option>Aujourd'hui</option>
-            <option>Cette semaine</option>
-            <option>Ce mois-ci</option>
-          </select>
+<select id="dateFilter">
+  <option value="all">Toutes les dates</option>
+  <option value="today">Aujourd'hui</option>
+  <option value="week">Cette semaine</option>
+  <option value="month">Ce mois-ci</option>
+</select>
 
-          <select>
-            <option>Villes</option>
-            <option>5 km</option>
-            <option>10 km</option>
-            <option>20 km</option>
-            <option>50 km</option>
-            <option>100 km</option>
-          </select>
-        </div>
+<select id="cityFilter">
+  <option value="all">Toutes les villes</option>
+  <option value="bayonne">Bayonne</option>
+  <option value="biarritz">Biarritz</option>
+  <option value="dax">Dax</option>
+  <option value="pau">Pau</option>
+  <option value="bordeaux">Bordeaux</option>
+</select>
 
-        <div class="filters-footer">
-          <span>6 événements trouvés</span>
-          <button class="clear-button">Effacer les filtres</button>
-        </div>
-      </div>
-    </section>
+    </div>
+
+    <div class="filters-footer">
+      <span id="eventCount">0 événement trouvé</span>
+      <button class="clear-button">Effacer les filtres</button>
+    </div>
+  </div>
+</section>
+
 
     <section id="all-events" class="events-grid">
       <!-- Les cartes des événements seront insérées ici par JavaScript -->
